definition-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: definition-service
  namespace: vendor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: definition
  template:
    metadata:
      labels:
        app: definition
    spec:
      containers:
        - name: definition
          image: <ecr-url>/definition:latest
          ports:
            - containerPort: 6565
