event-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-processor
  namespace: vendor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: processor
          image: <ecr-url>/event-processor:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: vendor-app
spec:
  selector:
    app: event
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
